--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -16,18 +16,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: AI Reviewer
-        uses: anc95/ChatGPT-CodeReview@main
-        env:
+      - name: AI Reviewer (Gemini)
+        uses: sturdy-dev/gemini-code-review-action@v0.6.1
+        with:
+          GEMINI_API_KEY: ${{ secrets.AI_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
-          OPENAI_API_BASE: "https://generativelanguage.googleapis.com/v1beta/openai/"
-          LANGUAGE: Portuguese
-          MODEL: "gemini-2.0-flash-exp" # Versão experimental que suporta a API de compatibilidade OpenAI
-          PROMPT: |
+          model: "gemini-1.5-flash"
+          custom_prompt: |
             Aja como um Engenheiro de Segurança Sênior (DevSecOps). 
             Analise o DIFF deste Pull Request buscando:
             1. Vulnerabilidades OWASP Top 10 (especialmente SQL Injection e Insecure Deserialization).
             2. Code Smells e complexidade ciclomática desnecessária.
             3. Aderência às melhores práticas de Java 25 e Spring Boot.
-            4. Responda com comentários técnicos e construtivos diretamente nas linhas do código afetado.
+            4. Responda com comentários técnicos e construtivos diretamente nas linhas do código afetado em Português.
