--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write # Necessário para comentar no PR
+      pull-requests: write
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -21,13 +21,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
-          OPENAI_API_BASE: "https://generativelanguage.googleapis.com/v1beta/openai/"
+          OPENAI_API_ENDPOINT: https://generativelanguage.googleapis.com/v1beta/openai
           LANGUAGE: Portuguese
-          MODEL: "gemini-2.0-flash-exp" # Versão experimental que suporta a API de compatibilidade OpenAI
+          MODEL: gemini-2.0-flash
           PROMPT: |
-            Aja como um Engenheiro de Segurança Sênior (DevSecOps). 
+            Aja como um Engenheiro de Seguranca Senior (DevSecOps).
             Analise o DIFF deste Pull Request buscando:
             1. Vulnerabilidades OWASP Top 10 (especialmente SQL Injection e Insecure Deserialization).
-            2. Code Smells e complexidade ciclomática desnecessária.
-            3. Aderência às melhores práticas de Java 25 e Spring Boot.
-            4. Responda com comentários técnicos e construtivos diretamente nas linhas do código afetado.
+            2. Code Smells e complexidade ciclomatica desnecessaria.
+            3. Aderencia as melhores praticas de Java 25 e Spring Boot 3.4.
+            4. Responda com comentarios tecnicos e construtivos diretamente nas linhas do codigo afetado.
