--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USE_GITHUB_MODELS: true
-          MODEL: google/gemini-2.0-flash
+          MODEL: gpt-4o-mini
           LANGUAGE: Portuguese
           PROMPT: |
             Aja como um Engenheiro de Seguranca Senior (DevSecOps).
