--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -10,7 +10,6 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-      models: true
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -19,6 +18,7 @@ jobs:
 
       - name: AI Reviewer
         uses: anc95/ChatGPT-CodeReview@main
+        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USE_GITHUB_MODELS: true
@@ -37,6 +37,7 @@ jobs:
 
       - name: Postar comentário no PR
         uses: actions/github-script@v7
+        if: ${{ always() }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
