--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: AI Reviewer
         uses: anc95/ChatGPT-CodeReview@main
+        id: ai_reviewer
         continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -34,6 +35,20 @@ jobs:
             - Comente nas LINHAS afetadas com: problema, impacto, e sugestão concreta (ex.: uso de prepared statements, validação, sanitização, refatoração).
             - Use português técnico e seja objetivo.
             - Sempre inclua pelo menos uma melhoria prática, mesmo se risco for baixo.
+
+      - name: AI Reviewer (fallback Gemini via endpoint compatível)
+        if: ${{ steps.ai_reviewer.outcome == 'failure' }}
+        uses: anc95/ChatGPT-CodeReview@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
+          OPENAI_API_ENDPOINT: https://generativelanguage.googleapis.com/v1beta/openai
+          MODEL: gemini-1.5-flash
+          LANGUAGE: Portuguese
+          PROMPT: |
+            Aja como Engenheiro de Segurança Senior (DevSecOps) e comente sempre no diff.
+            Foco em OWASP Top 10 e melhores práticas Java/Spring.
+            Indique problema, impacto e sugestão concreta em cada linha afetada.
 
       - name: Postar comentário no PR
         uses: actions/github-script@v7
