--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -10,20 +10,20 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-      models: true
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: AI Reviewer (GitHub Models - Phi-4)
+      - name: AI Reviewer (Gemini endpoint)
         uses: anc95/ChatGPT-CodeReview@main
         id: ai_reviewer
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USE_GITHUB_MODELS: true
-          MODEL: microsoft/phi-4
+          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
+          OPENAI_API_ENDPOINT: https://generativelanguage.googleapis.com/v1beta/openai
+          MODEL: gemini-1.5-flash
           LANGUAGE: Portuguese
           PROMPT: |
             Aja como Engenheiro de Segurança Senior (DevSecOps) e comente sempre no diff.
@@ -36,19 +36,7 @@ jobs:
             - Use português técnico e seja objetivo.
             - Sempre inclua pelo menos uma melhoria prática, mesmo se risco for baixo.
 
-      - name: AI Reviewer (fallback Gemini via endpoint compatível)
-        if: ${{ failure() }}
-        uses: anc95/ChatGPT-CodeReview@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
-          OPENAI_API_ENDPOINT: https://generativelanguage.googleapis.com/v1beta/openai
-          MODEL: gemini-1.5-flash
-          LANGUAGE: Portuguese
-          PROMPT: |
-            Aja como Engenheiro de Segurança Senior (DevSecOps) e comente sempre no diff.
-            Foco em OWASP Top 10 e melhores práticas Java/Spring.
-            Indique problema, impacto e sugestão concreta em cada linha afetada.
+      # removido fallback; usando endpoint Gemini diretamente para evitar 403 dos GitHub Models
 
       - name: Postar comentário no PR
         uses: actions/github-script@v7
