--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -10,20 +10,20 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      models: true
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: AI Reviewer (Gemini endpoint)
+      - name: AI Reviewer (GitHub Models - Phi-4)
         uses: anc95/ChatGPT-CodeReview@main
         id: ai_reviewer
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
-          OPENAI_API_ENDPOINT: https://generativelanguage.googleapis.com/v1beta/openai
-          MODEL: gemini-1.5-flash
+          USE_GITHUB_MODELS: true
+          MODEL: microsoft/phi-4
           LANGUAGE: Portuguese
           PROMPT: |
             Aja como Engenheiro de Segurança Senior (DevSecOps) e comente sempre no diff.
