--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -16,13 +16,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: AI Reviewer (GitHub Models - Phi-4)
+      - name: AI Reviewer (Gemini endpoint)
         uses: anc95/ChatGPT-CodeReview@main
         id: ai_reviewer
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USE_GITHUB_MODELS: true
-          MODEL: microsoft/phi-3.5-mini-instruct
+          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
+          OPENAI_API_ENDPOINT: https://generativelanguage.googleapis.com/v1beta/openai
+          MODEL: gemini-1.5-flash
           LANGUAGE: Portuguese
           PROMPT: |
             Aja como Engenheiro de Segurança Senior (DevSecOps) e comente sempre no diff.
